--- a/client/src/pages/Events.css
+++ b/client/src/pages/Events.css
@@ -1,6 +1,6 @@
 .events-control{
     text-align: center;
-    border: 1px solid #16ac8b;
+    border: 1px solid white;
     padding: 1rem;
     margin: 2rem auto;
     width: 30rem;
