--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,5 +1,3 @@
-
-
 html,
 body,
 body > div { /* the react root */
@@ -76,6 +74,15 @@ b { /* used for event dates/times */
   display:inline-block;
 }
 
+.events-control{
+  text-align: center;
+  border: 1px solid white;
+  padding: 1rem;
+  margin: 2rem auto;
+  width: 30rem;
+  max-width: 80%;
+}
+
 .fc { /* the calendar root */
   max-width: 1100px;
   margin: 0 auto;
@@ -90,6 +97,14 @@ b { /* used for event dates/times */
 .header {
   padding-bottom: 10px;
   text-align: right;
+}
+
+.login-email {
+  padding-bottom: 5px;
+}
+
+.main-navigation-items{
+  padding: 0px;
 }
 
 .submit-button {
