--- a/client/src/components/events/eventItem/EventItem.css
+++ b/client/src/components/events/eventItem/EventItem.css
@@ -1,7 +1,7 @@
 .events__list-item{
     margin: 1rem 0;
-    padding: 1rem;
-    border: 1px solid #16ac8b;
+    padding-bottom: 10px;
+    border-bottom: lightgray solid;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,8 +9,8 @@
 
 .events__list-item h1{
     margin:0;
-    font-size: 1.5rem;
-    color: #16ac8b;
+    font-size: 1rem;
+    color: white;
 }
 
 .events__list-item h2{
