implement popup on event click for calendar items. join only working in sidebar.

--- a/client/src/components/events/eventlist/EventList.css
+++ b/client/src/components/events/eventlist/EventList.css
@@ -1,7 +1,7 @@
 .eventList{
-    width: 40rem;
-    max-width: 90%;
-    margin: 2rem auto;
     list-style: none;
-    padding:0;
+    margin: 0 auto;
+    padding: 0;
+    width:40rem;
+    max-width: 90%;
 }
