--- a/client/src/components/attendings/attendingList/AttendingList.css
+++ b/client/src/components/attendings/attendingList/AttendingList.css
@@ -1,3 +1,16 @@
+.attending-button{
+    background-color: rgb(118, 130, 142);
+    border: none;
+    border-radius: 4px;
+    color: white;
+    text-align: center;
+    width: 100%;
+}
+
+.attending-button:hover {
+    background-color: rgb(143, 172, 182);
+  }
+
 .attending__list{
     list-style: none;
     margin: 0 auto;
@@ -9,7 +22,8 @@
 .attending__item{
     margin: 0.5rem 0;
     padding: 0.5rem;
-    border: 1px solid #16ac8b;
+    border: 1px solid white;
+    border-radius: 4px;
     display: flex;
     justify-content: space-between;
     align-items: center;
