--- a/client/src/components/events/eventItem/EventItem.css
+++ b/client/src/components/events/eventItem/EventItem.css
@@ -1,7 +1,21 @@
+.event-button{
+    background-color: rgb(118, 130, 142);
+    border: none;
+    border-radius: 4px;
+    color: white;
+    text-align: center;
+    width: 100%;
+}
+
+.event-button:hover {
+    background-color: rgb(143, 172, 182);
+  }
+
 .events__list-item{
-    margin: 1rem 0;
-    padding-bottom: 10px;
-    border-bottom: lightgray solid;
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    border: 1px solid white;
+    border-radius: 4px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,3 +36,4 @@
 .events__list-item p{
     margin: 0;
 }
+
