--- a/client/src/main.css
+++ b/client/src/main.css
@@ -103,6 +103,21 @@ b { /* used for event dates/times */
   padding-bottom: 5px;
 }
 
+.logout-button {
+  background-color: rgb(118, 130, 142);
+  float: right;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  width: 48%;
+}
+
+.logout-button:hover {
+  background-color: rgb(143, 172, 182);
+}
+
 .main-navigation-items{
   padding: 0px;
 }
